force-app/main/default/objects/RD_tblASMEValues__c/RD_tblASMEValues__c.object-meta.xml
<CustomObject>
    <label>RD tblASMEValues</label>
    <nameField>
        <label>RD tblASMEValues</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD tblASMEValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>