force-app/main/default/objects/RD_tblASMEValues__c/fields/CertOWText__c.field-meta.xml
<CustomField>
    <fullName>CertOWText__c</fullName>
    <label>CertOWText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>