force-app/main/default/objects/RD_tblASMEValues__c/fields/MNFAmm2__c.field-meta.xml
<CustomField>
    <fullName>MNFAmm2__c</fullName>
    <label>MNFAmm2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>