force-app/main/default/objects/RD_tblASMEValues__c/fields/SizingCertText__c.field-meta.xml
<CustomField>
    <fullName>SizingCertText__c</fullName>
    <label>SizingCertText</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>