force-app/main/default/objects/RD_tblASMEValues__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>DPM__c</columns>
    <columns>SZC__c</columns>
    <columns>STC__c</columns>
    <columns>MNFAin2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>GFS</value>
    </filters>
    <label>All</label>
</ListView>